--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </strong>
             </p>
             <p>
-                <img src="images/ha.gif" style="display: block;margin-left: auto;margin-right: auto">
+                <img src="images/ha-react.gif" style="display: block;margin-left: auto;margin-right: auto">
             </p>
 
             <p>The project contains the following repositories:</p>
@@ -159,8 +159,14 @@
                 </li>
                 <br/>
                 <li>
-                    <a href="https://github.com/OronNadiv/home-automation-ui">UI</a> - Front-end client using Angular-JS
-                    that interacts with the different API servers.
+                    <a href="https://github.com/OronNadiv/home-automation-ui-ng">UI</a> - Front-end client
+                    using <a href="https://angularjs.org/">AngularJS</a> and
+                    <a href="https://ionicframework.com/">Ionic</a> that interacts with the different API servers.
+                </li>
+                <li>
+                    <a href="https://github.com/OronNadiv/home-automation-ui-react">UI</a> - Front-end client
+                    using <a href="https://facebook.github.io/react/">React-Redux</a> and
+                    <a href="http://www.material-ui.com/">Material UI</a> that interacts with the different API servers.
                 </li>
             </ul>
 
