react image height

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </strong>
             </p>
             <p>
-                <img src="images/ha-react.gif" style="display: block;margin-left: auto;margin-right: auto">
+                <img src="images/ha-react.gif" style="height: 400px;display: block;margin-left: auto;margin-right: auto">
             </p>
 
             <p>The project contains the following repositories:</p>
