react image height

--- a/index.html
+++ b/index.html
@@ -159,14 +159,15 @@
                 </li>
                 <br/>
                 <li>
-                    <a href="https://github.com/OronNadiv/home-automation-ui-ng">UI</a> - Front-end client
-                    using <a href="https://angularjs.org/">AngularJS</a> and
-                    <a href="https://ionicframework.com/">Ionic</a> that interacts with the different API servers.
-                </li>
-                <li>
-                    <a href="https://github.com/OronNadiv/home-automation-ui-react">UI</a> - Front-end client
+                    <a href="https://github.com/OronNadiv/home-automation-ui-react">UI - React-Redux</a> - Front-end client
                     using <a href="https://facebook.github.io/react/">React-Redux</a> and
                     <a href="http://www.material-ui.com/">Material UI</a> that interacts with the different API servers.
+                </li>
+                <br/>
+                <li>
+                    <a href="https://github.com/OronNadiv/home-automation-ui-ng">UI - AngularJS</a> - Front-end client
+                    using <a href="https://angularjs.org/">AngularJS</a> and
+                    <a href="https://ionicframework.com/">Ionic</a> that interacts with the different API servers.
                 </li>
             </ul>
 
