--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@
                     <a href="https://www.openssl.org/">OpenSSL</a> v1.0.2 (or higher)
                 </li>
                 <li><a href="https://elements.heroku.com/addons/heroku-postgresql">PostgreSQL DB</a></li>
-                <li><a href="https://elements.heroku.com/addons/rediscloud">Redis Cloud</a></li>
+                <li><a href="https://elements.heroku.com/addons/cloudamqp">Cloud AMQP (RabbitMQ)</a></li>
                 <li><a href="https://elements.heroku.com/addons/papertrail">Papertrail</a></li>
+                <li><a href="https://elements.heroku.com/addons/pubnub">PubNub</a></li>
                 <li><p><a href="https://elements.heroku.com/addons/mailgun">Mailgun</a> (optional)</p></li>
                 <li><p>Step 1: Clone the server's repository to your local machine.</p></li>
             </ul>
