--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ heroku apps:create &lt;app name&gt;</code></pre>
                     Recommended: Raspbian Jessie Light.
                 </li>
                 <br/>
-                <li>Step 2: Find the IP address of the raspberry and connect to it using SSH.
-                    <pre><code>ssh pi@&lt;IP address&gt;</code></pre>
+                <li>Step 2: Find the IP address of the raspberry pi and connect to it using SSH.
+                    <pre><code>ssh -o PubkeyAuthentication=no pi@&lt;IP address&gt;</code></pre>
                     <p>
                         Username: <code>pi</code>.
                         <br/>Password: <code>raspberry</code>.
