--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@ heroku apps:create &lt;app name&gt;</code></pre>
                 </li>
                 <li>Step 3: Download and install updates.
                     <pre><code>sudo apt-get update
-sudo apt-get -y upgrade</code></pre>
+sudo apt-get -y upgrade
+sudo apt-get -y dist-upgrade</code></pre>
                 </li>
                 <li>Step 4: Setup WiFi. Open the wpa-supplicant configuration file in nano:
                     <pre><code>sudo nano /etc/wpa_supplicant/wpa_supplicant.conf</code></pre>
