--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ npm install</code></pre>
                 </li>
                 <li>Step 10: Download and install Supervisor. Then copy the configuration file.
                     <pre><code>sudo apt-get install supervisor
-cp &lt;repository&gt;/scripts/*.conf /etc/supervisor/conf.d/</code></pre>
+sudo cp &lt;repository&gt;/scripts/*.conf /etc/supervisor/conf.d/</code></pre>
                     </p>
                     </ol>
                 </li>
