--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ heroku apps:create &lt;app name&gt;</code></pre>
                 <li>Step 3: Enable SSH, enable camera, setup locale, change timezone, change username and password, and
                     setup wifi using the following command:
                     <p>
-                    <pre><code>sudo raspbi-config</code></pre>
+                    <pre><code>sudo raspi-config</code></pre>
                     </p>
                     Once SSH is enabled, you can now find the IP address of the raspberry pi and connect to it using the
                     following command:
